--- a/app/style/partial/_utilities.scss
+++ b/app/style/partial/_utilities.scss
@@ -8,6 +8,7 @@
 
 .__segment {
     padding: 0 1em 100px 1em;
+    margin-bottom: 100px;
     position: relative;
     background-color: #f4f4f4;
     border-top: 1px solid #dededb;
